src/objects/Licenses__c.object
<CustomObject>
    <description>Represents different licenses used by business units. The hidden name is identical to the name and is updated to be the same by an active workflow</description>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <description>Related Business Unit</description>
        <label>Business Unit</label>
        <referenceTo>Business_Unit__c</referenceTo>
        <relationshipLabel>Licenses</relationshipLabel>
        <relationshipName>Licenses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>License_Name_Hidden__c</fullName>
        <description>The hidden name is identical to the name and is updated to be the same by an active workflow</description>
        <label>(Hidden) License Name</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>License_assigned_to__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User assigned to whom the license is assigned to</description>
        <inlineHelpText>Shows the name of the user that the license is assigned to</inlineHelpText>
        <label>License assigned to</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Licenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Licenses</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>License_assigned_to__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Licenses Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Licenses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Business_Unit_in_name</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(Contains(Name, 
Case( Business_Unit__r.Name,
        &quot;Central Billing&quot;,&quot;Central Billing&quot;,
 	&quot;Corporate Communication&quot;,&quot;Corporate Communication&quot;,
 	&quot;Corporate Services&quot;,&quot;Corporate Services&quot;,
 	&quot;IDFS ACCA&quot;,&quot;IDFS ACCA&quot;,
 	&quot;IDFS Africa&quot;,&quot;IDFS Africa&quot;,
 	&quot;IDFS Americas&quot;,&quot;IDFS Americas&quot;,
 	&quot;IDFS ASPAC&quot;,&quot;IDFS ASPAC&quot;,
 	&quot;IDFS Cargo&quot;,&quot;IDFS Cargo&quot;,
 	&quot;IDFS E&amp;F&quot;,&quot;IDFS E&amp;F&quot;,
 	&quot;IDFS Europe&quot;,&quot;IDFS Europe&quot;,
 	&quot;IDFS Invoice Works&quot;,&quot;IDFS Invoice Works&quot;,
 	&quot;IDFS MENA&quot;,&quot;IDFS MENA&quot;,
 	&quot;IDFS North Asia&quot;,&quot;IDFS North Asia&quot;,
 	&quot;IDFS Passanger Central&quot;,&quot;IDFS Passanger Central&quot;,
 	&quot;IDFS TASF&quot;,&quot;IDFS TASF&quot;,
 	&quot;MACS&quot;,&quot;MACS&quot;,&quot;&quot;))
)</errorConditionFormula>
        <errorMessage>You must start the name of the record with the Business Unit it&apos;s associated with, e.g. IDFS Africa, or Corporate Services.</errorMessage>
    </validationRules>
</CustomObject>